Refactor conversation handling to remove workspace dependency and streamline title generation