@@ -10,7 +10,6 @@ import org.springframework.data.domain.Limit;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.transaction.support.TransactionTemplate;
-import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
@@ -29,7 +28,6 @@ import zas.admin.zec.backend.rag.token.*;
 import java.io.IOException;
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.concurrent.atomic.AtomicReference;
 
 @Slf4j
 @Service
@@ -98,10 +96,7 @@ public class ConversationService {
             save(message, userId, conversationId);
         }
 
-        var workspace = workspaceService.findWorkspaceBySource(messages.getFirst().source())
-                .orElse("");
-
-        generateConversationTitle(messages.get(0).message(), messages.get(1).message(), userId, conversationId, messages.get(0).lang(), workspace);
+        generateConversationTitle(messages.get(0).message(), messages.get(1).message(), userId, conversationId, messages.get(0).lang());
     }
 
     public void update(String userUuid, String conversationId, List<FAQMessage> messages) {
@@ -134,16 +129,12 @@ public class ConversationService {
         StringBuilder assistantMessage = new StringBuilder();
         Set<Source> sources = new HashSet<>();
         Set<String> suggestions = new HashSet<>();
-        AtomicReference<String> resolvedWorkspace = new AtomicReference<>();
 
-        // Le workspace choisi lors d'un tour précédent de la même conversation est réutilisé
-        // (mémorisé sur ConversationTitleEntity) afin d'éviter de relancer une inférence LLM à
-        // chaque message ; sinon RAGTool infère lui-même le workspace le plus pertinent.
-        var effectiveQuestion = question.workspace() != null && !question.workspace().isBlank()
-                ? question
-                : question.toBuilder().workspace(findStoredWorkspace(userId, question.conversationId())).build();
-
-        return getTokenStream(effectiveQuestion, userId)
+        // Le workspace ne provient que de la Question elle-même si elle en porte un ; une
+        // conversation n'est pas figée sur un seul workspace (une question suivante peut viser un
+        // tout autre workspace). À défaut, RAGTool infère lui-même le workspace le plus pertinent
+        // pour cette question précise, à chaque appel.
+        return getTokenStream(question, userId)
                 .flatMap(token -> switch (token) {
                     case StatusToken statusToken -> Flux.just(statusToken.content());
                     case SuggestionToken suggestionToken -> {
@@ -158,10 +149,7 @@ public class ConversationService {
                         }
                         yield Flux.empty();
                     }
-                    case WorkspaceToken workspaceToken -> {
-                        resolvedWorkspace.set(workspaceToken.name());
-                        yield Flux.just(workspaceToken.content());
-                    }
+                    case WorkspaceToken workspaceToken -> Flux.just(workspaceToken.content());
                     case TextToken textToken -> {
                         assistantMessage.append(textToken.content());
                         yield Flux.just(textToken.content());
@@ -169,26 +157,14 @@ public class ConversationService {
                 })
                 .concatWithValues("<message_uuid>%s</message_uuid>".formatted(assistantMessageId))
                 .concatWith(
-                        Mono.fromRunnable(() -> saveExchange(effectiveQuestion, userId, assistantMessageId, assistantMessage.toString(),
-                                        sources, suggestions, timestamp, resolvedWorkspace.get()))
+                        Mono.fromRunnable(() -> saveExchange(question, userId, assistantMessageId, assistantMessage.toString(),
+                                        sources, suggestions, timestamp))
                                 .subscribeOn(Schedulers.boundedElastic())
                                 .then(Mono.empty()))
                 .onErrorResume(err -> {
                     log.error(err.getMessage(), err);
                     return Flux.just("<error>%s</error>".formatted(err.getMessage()));
                 });
-    }
-
-    /**
-     * Recherche le workspace mémorisé pour une conversation existante (tour précédent), afin que
-     * {@link RAGTool} n'ait pas à réinférer le workspace à chaque message. Retourne une chaîne vide
-     * si la conversation est nouvelle ou n'a pas encore de workspace résolu.
-     */
-    private String findStoredWorkspace(String userId, String conversationId) {
-        return conversationTitleRepository.findByUserIdAndConversationId(userId, conversationId)
-                .map(ConversationTitleEntity::getWorkspace)
-                .filter(StringUtils::hasLength)
-                .orElse("");
     }
 
     /**
@@ -276,7 +252,7 @@ public class ConversationService {
     }
 
     private void saveExchange(Question question, String userId, String assistantMessageId, String answer, Set<Source> sources,
-                              Set<String> suggestions, LocalDateTime userMessageTimestamp, String resolvedWorkspace) {
+                              Set<String> suggestions, LocalDateTime userMessageTimestamp) {
 
         var userMessage = new Message(UUID.randomUUID().toString(), userId, question.conversationId(), null,
                 question.language(), question.query(), "USER", null, null, userMessageTimestamp);
@@ -285,8 +261,7 @@ public class ConversationService {
 
         save(userMessage, userId, question.conversationId());
         save(assistantMessage, userId, question.conversationId());
-        generateConversationTitle(question.query(), answer, userId, question.conversationId(), question.language(), resolvedWorkspace);
-        syncConversationWorkspace(userId, question.conversationId(), resolvedWorkspace);
+        generateConversationTitle(question.query(), answer, userId, question.conversationId(), question.language());
     }
 
     private List<Message> getConversationHistory(String conversationId, String userId, Limit limit) {
@@ -409,7 +384,7 @@ public class ConversationService {
         return String.join("#", Arrays.stream(sourceParts).filter(part -> part != null && !part.isEmpty()).toList());
     }
 
-    private void generateConversationTitle(String initialQuery, String initialResponse, String userId, String conversationId, String language, String workspace) {
+    private void generateConversationTitle(String initialQuery, String initialResponse, String userId, String conversationId, String language) {
         if (conversationTitleRepository.findByUserIdAndConversationId(userId, conversationId).isEmpty()) {
             var title = chatClient.prompt()
                     .system(ConversationPrompts.getConversationTitlePrompt(language)
@@ -423,29 +398,9 @@ public class ConversationService {
             entity.setConversationId(conversationId);
             entity.setTitle(title);
             entity.setTimestamp(LocalDateTime.now());
-            entity.setWorkspace(StringUtils.hasLength(workspace) ? workspace : workspaceService.getDefaultWorkspace());
 
             conversationTitleRepository.save(entity);
         }
-    }
-
-    /**
-     * Met à jour le workspace mémorisé d'une conversation déjà existante si le workspace résolu
-     * pour ce tour diffère de celui enregistré (ex. première inférence effectuée après la création
-     * du titre, ou correction d'une inférence précédente). Sans effet si aucun titre n'existe
-     * encore (il sera créé avec le bon workspace par {@link #generateConversationTitle}) ou si
-     * aucun workspace n'a été résolu pour ce tour.
-     */
-    private void syncConversationWorkspace(String userId, String conversationId, String resolvedWorkspace) {
-        if (!StringUtils.hasLength(resolvedWorkspace)) {
-            return;
-        }
-        conversationTitleRepository.findByUserIdAndConversationId(userId, conversationId)
-                .filter(entity -> !resolvedWorkspace.equals(entity.getWorkspace()))
-                .ifPresent(entity -> {
-                    entity.setWorkspace(resolvedWorkspace);
-                    conversationTitleRepository.save(entity);
-                });
     }
 
     public List<String> getWorkspaces() {
